--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 ordered-set==4.1.0
 packaging==25.0
+Pillow==10.3.0
 Pygments==2.19.2
 requests==2.32.4
 rich==13.9.4
